--- a/app/assets/stylesheets/custom/BoardIndex.scss
+++ b/app/assets/stylesheets/custom/BoardIndex.scss
@@ -35,10 +35,6 @@
   }
 }
 
-.full-height {
-  height: 100%;
-}
-
 .board-tile-image {
   padding-top: 30%;
 }
