--- a/app/assets/stylesheets/custom/_general.scss
+++ b/app/assets/stylesheets/custom/_general.scss
@@ -1,13 +1,15 @@
 html, body {
-  height: 100%;
   background: #eee;
+}
+
+header {
 }
 
 a {
   color: inherit;
 
   &:hover {
-    color: $secondary-color;
+    color: $primary-color;
   }
 }
 
@@ -16,7 +18,8 @@ a {
 }
 
 #wrapper {
-  background-color: $medium-gray;
+  background-color: $light-gray;
+  height: 100%;
 }
 
 .center {
@@ -45,4 +48,13 @@ a {
 
 .center {
   text-align: center;
+}
+
+.button-margin {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.full-height {
+  height: 100% !important;
 }
